FIXED: Click and display issue with overlapping toolbar.

--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -5,6 +5,7 @@
     left: 0;
     width: 100%;
     height: 50px;
+    z-index: 9999;
 
     /* Flex bar. */
     display:flex;
